--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: ggjjy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: ggjjy
   template:
     metadata:
       labels:
-        app: ray
+        app: ggjjy
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/ggjjy:latest
+        name: ggjjy
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "d3f5baeb-63bf-4180-a85f-14e3ccc5fd04"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl5hg55"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "d3f5baeb-63bf-4180-a85f-14e3ccc5fd04"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm66ioo6"
         - name: Share_Path
           value: "/v2link"
