--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ggjjy
+  name: edrfxc564
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "ggjjy"
+  - name: "edrfxc564"
     port: 8080
   selector:
-    app: ggjjy
+    app: edrfxc564
